dfir_rs/tests/compile-fail/surface_loop_missing_windowing.rs
fn main() {
    let mut df = dfir_rs::dfir_syntax! {
        a = source_iter(0..10);
        loop {
            a -> null();
        }
    };
    df.run_available();
}
